# tgeye

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
crates/app/: Cargo.toml
crates/app/src/: cli.rs  main.rs
crates/app/src/commands/: chats.rs  collector.rs  config_cmd.rs  doctor.rs  init.rs  mcp.rs  migrate.rs  mod.rs  token_cmd.rs
crates/config/: Cargo.toml
crates/config/src/: app_config.rs  data_dir.rs  error.rs  lib.rs  secrets.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs  media.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: cursor.rs  lib.rs  media_ops.rs  shape.rs
crates/mcp-server/tests/: media.rs  write.rs
crates/storage/: Cargo.toml
crates/storage/src/: attachments.rs  fts.rs  lib.rs  media.rs  queries.rs  repo.rs
crates/storage/tests/: queries.rs  repo.rs
crates/telegram/: Cargo.toml
crates/telegram/src/: lib.rs  mapping.rs  media.rs  polling.rs  write.rs
migrations/: 0001_baseline.sql  0002_collector.sql  0003_fts.sql  0004_media.sql  0005_write_rules.sql
