[workspace]
resolver = "3"
members = [
    "crates/app",
    "crates/config",
    "crates/domain",
    "crates/mcp-server",
    "crates/storage",
    "crates/telegram",
]

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/denyzhirkov/tgeye"

[workspace.dependencies]
tgeye-config = { path = "crates/config" }
tgeye-domain = { path = "crates/domain" }
tgeye-mcp-server = { path = "crates/mcp-server" }
tgeye-storage = { path = "crates/storage" }
tgeye-telegram = { path = "crates/telegram" }

anyhow = "1"
async-trait = "0.1"
sha2 = "0.10"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
toml = "1"
secrecy = { version = "0.10", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
# 0.9 requires rustc 1.94+; stay on 0.8 until the toolchain is bumped
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
teloxide = { version = "0.17", default-features = false, features = ["rustls"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
chrono-tz = "0.10"
rmcp = { version = "2", features = ["server", "macros", "transport-io"] }
schemars = "1"
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tempfile = "3"

[profile.release]
lto = "thin"
strip = "symbols"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
