[package]
name = "tgeye-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "tgeye_config"

[dependencies]
chrono-tz = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
