[package]
name = "tgeye-mcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "tgeye_mcp_server"

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
tgeye-domain = { workspace = true }
tgeye-storage = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
