[package]
name = "tgeye-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "tgeye_storage"

[dependencies]
chrono = { workspace = true }
sqlx = { workspace = true }
tgeye-domain = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
