[package]
name = "tgeye-telegram"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "tgeye_telegram"

[dependencies]
async-trait = { workspace = true }
secrecy = { workspace = true }
serde_json = { workspace = true }
teloxide = { workspace = true }
tgeye-domain = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
